# dotfiles

./: .Xresources  .compton.conf  .spacemacs  .tmux.conf
.config/alacritty/: alacritty.yml
.config/compton/: compton.conf  homebase.conf  ultpro.conf
.config/dunst/: dunstrc
.config/nvim/: coc-settings.json  init.vim
.config/nvim/after/ftplugin/: gdscript.vim
.config/picom/: homebase.conf  picom.conf
.config/rofi/: colors.rasi  config.rasi  ribbon_top.rasi
.config/taffybar/: taffybar.hs  taffybar.rc
.emacs.d/: Cask  init.el
.xmonad/: xmonad.hs
.xmonad/lib/: NamedActions.hs  SubmapMenu.hs
taffybar/: forkk-taffybar.cabal  taffybar.css  taffybar.hs
xmonad/: NamedActions.hs  SubmapMenu.hs  TaffyPagerHints.hs  build  forkk-xmonad.cabal  update  xmonad.hs
