name:                forkk-xmonad
version:             0.1.0.0
author:              Forkk
maintainer:          contact@forkk.net
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  hs-source-dirs:      .
  main-is:             xmonad.hs
  other-modules:       SubmapMenu
                     , NamedActions
                     , TaffyPagerHints
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , filepath
                     , process
                     , unix
                     , network-bsd
                     , utf8-string
                     , xmonad>=0.15
                     , xmonad-contrib>=0.15
                     , X11>=1.8
  default-language:    Haskell2010

